--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "repository": "saunAAA/react-redux-geogebra",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
-  "source": "src/index.tsx",
+  "source": "src/index.ts",
   "engines": {
     "node": ">=10"
   },
