--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,21 +2,25 @@
   "compilerOptions": {
     "outDir": "dist",
     "module": "esnext",
+    "target": "esnext",
     "lib": ["dom", "esnext"],
-    "moduleResolution": "node",
     "jsx": "react",
-    "sourceMap": true,
+    "moduleResolution": "node",
     "declaration": true,
-    "esModuleInterop": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
+    "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
+    "strictFunctionTypes": true,
+    "strictPropertyInitialization": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "allowSyntheticDefaultImports": true
+    "noImplicitReturns": false,
+    "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "example"]
+  "exclude": ["node_modules", "build", "dist", "example", "rollup.config.js"]
 }
