--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "dist"
   ],
   "dependencies": {
+    "fast-xml-parser": "^4.0.6",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "throttle-debounce": "^3.0.1"
