--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "start": "node ../node_modules/react-scripts/bin/react-scripts.js --openssl-legacy-provider start",
-    "build": "node ../node_modules/react-scripts/bin/react-scripts.js build",
+    "build": "node ../node_modules/react-scripts/bin/react-scripts.js --openssl-legacy-provider build",
     "test": "node ../node_modules/react-scripts/bin/react-scripts.js test",
     "eject": "node ../node_modules/react-scripts/bin/react-scripts.js eject"
   },
@@ -19,9 +19,10 @@
     "@types/react-dom": "link:../node_modules/@types/react-dom",
     "react": "link:../node_modules/react",
     "react-dom": "link:../node_modules/react-dom",
+    "react-json-view": "^1.21.3",
+    "react-redux-geogebra": "link:..",
     "react-scripts": "link:../node_modules/react-scripts",
-    "typescript": "link:../node_modules/typescript",
-    "react-redux-geogebra": "link:.."
+    "typescript": "link:../node_modules/typescript"
   },
   "devDependencies": {
     "@babel/plugin-syntax-object-rest-spread": "^7.8.3"
